--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-submit/case-edit-submit.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-submit/case-edit-submit.html
@@ -1,6 +1,6 @@
 <div *ngIf="!caseEdit.isEventCompletionChecksRequired">
   <!-- Event trigger name -->
-  <h1 class="govuk-heading-l">{{ eventTrigger.name | rpxTranslate}}</h1>
+  <h1 class="govuk-heading-l">{{ eventTrigger.name | rpxTranslate }}</h1>
 
   <!--Case ID or Title -->
   <div *ngIf="getCaseTitle(); then titleBlock; else idBlock"></div>
@@ -19,10 +19,10 @@
   <form class="check-your-answers" [formGroup]="editForm" (submit)="submit()">
     <ng-container *ngIf="checkYourAnswerFieldsToDisplayExists()">
 
-      <h2 class="heading-h2">{{pageTitle | rpxTranslate }}</h2>
-      <span class="text-16" *ngIf="!caseFlagField">{{'Check the information below carefully.' | rpxTranslate}}</span>
+      <h2 class="heading-h2">{{ pageTitle | rpxTranslate }}</h2>
+      <span class="text-16" *ngIf="!caseEdit.isCaseFlagSubmission">{{ 'Check the information below carefully.' | rpxTranslate }}</span>
 
-      <table class="form-table" [attr.aria-describedby]="'check your answers table' | rpxTranslate">
+      <table class="form-table" aria-describedby="'check your answers table' | rpxTranslate">
         <tbody>
         <ng-container *ngFor="let page of wizard.pages">
           <ng-container *ngIf="isShown(page)">
@@ -33,24 +33,17 @@
               <ng-container *ngIf="canShowFieldInCYA(field)">
                 <tr ccdLabelSubstitutor [caseField]="field" [hidden]="field.hidden"
                     [formGroup]="editForm.controls['data']" [contextFields]="contextFields">
-                  <th *ngIf="!isLabel(field) && !caseEdit.isCaseFlagSubmission" class="valign-top case-field-label">
-                    <span class="text-16">{{field.label | rpxTranslate}}</span>
-                  </th>
+                  <th *ngIf="!isLabel(field) && !caseEdit.isCaseFlagSubmission" class="valign-top case-field-label"><span class="text-16">{{ field.label | rpxTranslate }}</span></th>
                   <td class="form-cell case-field-content" [attr.colspan]="isLabel(field) ? '2' : '1'">
                     <ccd-field-read
                       [formGroup]="editForm.controls['data']" [topLevelFormGroup]="editForm.controls['data']"
                       [caseField]="summaryCaseField(field)" [context]="paletteContext" [caseFields]="contextFields"></ccd-field-read>
                   </td>
-                  <ng-container *ngIf="!caseFlagField">
-                    <td class="valign-top check-your-answers__change case-field-change">
-                      <a *ngIf="isChangeAllowed(field)" (click)="navigateToPage(page.id)"
-                        href="javascript:void(0)">
-                        <span class="text-16" attr.aria-label="{{'Change' | rpxTranslate}} {{ field.label | rpxTranslate }}">
-                          {{'Change' | rpxTranslate}}
-                        </span>
-                      </a>
-                    </td>
-                  </ng-container>
+                  <td class="valign-top check-your-answers__change case-field-change">
+                    <a *ngIf="isChangeAllowed(field)" (click)="navigateToPage(page.id)"
+                      href="javascript:void(0)"><span class="text-16" attr.aria-label="{{ 'Change' | rpxTranslate }} {{ field.label | rpxTranslate }}">
+                        {{ 'Change' | rpxTranslate }}</span></a>
+                  </td>
                 </tr>
               </ng-container>
             </ng-container>
@@ -61,12 +54,12 @@
     </ng-container>
     <ng-container *ngIf="readOnlySummaryFieldsToDisplayExists()">
 
-      <table class="summary-fields" [attr.aria-describedby]="'summary fields table' | rpxTranslate">
+      <table class="summary-fields" aria-describedby="'summary fields table' | rpxTranslate">
         <tbody>
           <ng-container *ngFor="let field of showSummaryFields">
               <ng-container [ngSwitch]="!(field | ccdIsCompound)">
                 <tr *ngSwitchCase="true" ccdLabelSubstitutor [caseField]="field" [formGroup]="editForm.controls['data']" [contextFields]="contextFields">
-                  <th id="summary-field-label">{{field.label | rpxTranslate}}</th>
+                  <th id="summary-field-label">{{ field.label | rpxTranslate }}</th>
                   <td class="form-cell">
                     <ccd-field-read [formGroup]="editForm.controls['data']" [caseField]="summaryCaseField(field)"></ccd-field-read>
                   </td>
@@ -82,30 +75,28 @@
       </table>
     </ng-container>
     <ng-container *ngIf="showEventNotes()">
-      <fieldset id="fieldset-event" formGroupName="event">
+      <fieldset id="fieldset-event" formGroupName="event" *ngIf="profile && !isSolicitor()">
         <legend style="display: none;"></legend>
         <div class="form-group">
           <label for="field-trigger-summary" class="form-label">
-            {{'Event summary (optional)' | rpxTranslate}}
-            <span class="form-hint">{{'A few words describing the purpose of the event.' | rpxTranslate}}</span>
+            {{ 'Event summary (optional)' | rpxTranslate }}
+            <span class="form-hint">{{ 'A few words describing the purpose of the event.' | rpxTranslate }}</span>
           </label>
           <input type="text" id="field-trigger-summary" class="form-control bottom-30 width-50" formControlName="summary" maxlength="1024">
         </div>
         <div class="form-group">
-          <label for="field-trigger-description" class="form-label">{{'Event description(optional)' | rpxTranslate}}</label>
+          <label for="field-trigger-description" class="form-label">{{ 'Event description(optional)' | rpxTranslate }}</label>
           <textarea id="field-trigger-description" class="form-control bottom-30 width-50" formControlName="description"
-                    maxlength="65536">
-          </textarea>
+                    maxlength="65536"></textarea>
         </div>
       </fieldset>
     </ng-container>
     <div class="form-group form-group-related">
       <button class="button button-secondary" type="button" [disabled]="!hasPrevious() || caseEdit.isSubmitting" (click)="previous()">
-        {{ 'Previous' | rpxTranslate}}
+        {{ 'Previous' | rpxTranslate }}
       </button>
       <button type="submit" [disabled]="isDisabled" class="button">
-        {{ triggerText | rpxTranslate}}
-      </button>
+        {{ triggerText | rpxTranslate }}</button>
     </div>
     <p class="cancel">
       <a (click)="cancel()" href="javascript:void(0)" [class.disabled]="caseEdit.isSubmitting">
