--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-details/query-details.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-details/query-details.component.html
@@ -1,7 +1,9 @@
 <ng-container *ngIf="query">
   <div>
-    <div class="query_details_caption">{{ 'Query details' | rpxTranslate }}</div>
     <table class="govuk-table query-details-table" [attr.aria-describedby]="'Details of the query' | rpxTranslate">
+      <caption class="govuk-table__caption govuk-table__caption--l">
+        <div>{{ 'Query details' | rpxTranslate }}</div>
+      </caption>
       <tbody class="govuk-table__body">
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header">{{ 'Last submitted by' | rpxTranslate }}</th>
@@ -47,19 +49,25 @@
   <ng-container *ngIf="query.children?.length > 0">
     <ng-container *ngFor="let child of query.children; let i = index;">
       <ng-container *ngIf="i % 2 === 0; else followUpMessage">
-        <div class="query_details_caption">{{ 'Response' | rpxTranslate }}</div>
-        <table class="govuk-table query-details-table"
-               [attr.aria-describedby]="'Response of the query' | rpxTranslate">
+        <table class="govuk-table query-details-table" [attr.aria-describedby]="'Response of the query' | rpxTranslate">
+          <caption class="govuk-table__caption govuk-table__caption--l">
+            <div>{{ 'Response' | rpxTranslate }}</div>
+          </caption>
           <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
             <th scope="row" class="govuk-table__header">{{ 'Last response date' | rpxTranslate }}</th>
             <td class="govuk-table__cell">{{ child.createdOn | date: 'dd MMM yyyy' }}</td>
           </tr>
 
-          <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header">{{ 'Response detail' | rpxTranslate }}</th>
-            <td class="govuk-table__cell">{{ child.body }}</td>
-          </tr>
+            <tr *ngIf="isCaseworker()" class="govuk-table__row">
+              <th scope="row" class="govuk-table__header">{{ 'Caseworker name' | rpxTranslate }}</th>
+              <td class="govuk-table__cell">{{ child.name }}</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+              <th scope="row" class="govuk-table__header">{{ 'Response detail' | rpxTranslate }}</th>
+              <td class="govuk-table__cell">{{ child.body }}</td>
+            </tr>
 
           <tr class="govuk-table__row">
             <th scope="row" class="govuk-table__header">{{ 'Attachments' | rpxTranslate }}</th>
