--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/read-query-management-field.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/read-query-management-field.component.html
@@ -22,7 +22,7 @@
     <button id="ask-follow-up-question" class="govuk-button" data-module="govuk-button"
             [routerLink]="['/query-management', 'query', caseId, '4']"
     >
-      {{ 'Ask a follow-up question' }}
+      {{ 'Ask a follow-up question' | rpxTranslate }}
     </button>
   </ng-container>
 
