--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-list/case-list.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-list/case-list.component.html
@@ -11,7 +11,7 @@
           </label>
         </div>
       </th>
-      <th class="govuk-table__header" scope="col" *ngFor="let h of tableConfig.columnConfigs">{{h.header | rpxTranslate}}}}</th>
+      <th class="govuk-table__header" scope="col" *ngFor="let h of tableConfig.columnConfigs">{{h.header | rpxTranslate}}</th>
     </tr>
   </thead>
   <tbody class="govuk-table__body">
