--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/dynamic-multi-select-list/read-dynamic-multi-select-list-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/dynamic-multi-select-list/read-dynamic-multi-select-list-field.html
@@ -1,3 +1,3 @@
 <div *ngFor="let value of caseField.value">
-  <ccd-markdown>[content]="value.code | ccdFixedList:caseField.list_items"</ccd-markdown>
+  <ccd-markdown [content]="value.code | ccdFixedList:caseField.list_items"></ccd-markdown>
 </div>
