--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-list/query-list.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-list/query-list.component.html
@@ -16,7 +16,7 @@
 
     <tbody class="govuk-table__body">
     <tr class="govuk-table__row query-list__row"
-        *ngFor="let message of queryListData.partyMessages"
+        *ngFor="let message of queryListData.queries"
     >
       <td class="govuk-table__cell query-list__cell query-list__cell--first">
         <a href="javascript:void(0)" (click)="showDetails(message)">{{ message.subject }}</a>
