--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/manage-case-flags/manage-case-flags.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/manage-case-flags/manage-case-flags.component.html
@@ -1,4 +1,4 @@
-<ng-container [formGroup]="formGroup">
+<div class="form-group" [formGroup]="formGroup">
   <div class="govuk-form-group" [ngClass]="{'form-group-error': errorMessages.length > 0}">
     <fieldset class="govuk-fieldset" aria-describedby="manage-case-flag-heading">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -14,13 +14,12 @@
         <div class="govuk-radios__item" *ngFor="let flagDisplay of flagsDisplayData; index as i">
           <input class="govuk-radios__input" id="flag-selection-{{i}}" [name]="selectedControlName"
             type="radio" [value]="flagDisplay" [formControlName]="selectedControlName"/>
-          <label class="govuk-label govuk-radios__label" for="flag-selection-{{i}}" [innerHtml]="flagDisplay"></label>
+          <label class="govuk-label govuk-radios__label" for="flag-selection-{{i}}" [innerHtml]="flagDisplay.label"></label>
         </div>
       </div>
     </fieldset>
   </div>
-</ng-container>
-
-<div class="govuk-button-group" *ngIf="!noFlagsError">
-  <button class="button button-primary" type="button" (click)="onNext()">{{'Next' | rpxTranslate}}</button>
+  <div class="govuk-button-group" *ngIf="!noFlagsError">
+    <button class="button button-primary" type="button" (click)="onNext()">{{'Next' | rpxTranslate}}</button>
+  </div>
 </div>
