EUI-8601: JudicialUser field not working when used in a collection
Fix judicial user display to include email address, as per PR review comment from @johnbenjamin-hmcts.

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/judicial-user/write-judicial-user-field.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/judicial-user/write-judicial-user-field.component.html
@@ -13,7 +13,7 @@
     <mat-option *ngFor="let judicialUser of filteredJudicialUsers$ | async"
       class="select-option" [ngClass]="{'hide-autocomplete': !showAutocomplete}"
       [value]="judicialUser" (onSelectionChange)="onSelectionChange($event)">
-      {{ judicialUser.fullName }}
+      {{ judicialUser.fullName }} ({{ judicialUser.emailId }})
     </mat-option>
     <mat-option *ngIf="noResults && searchTerm && searchTerm.length > minSearchCharacters && showAutocomplete" class="select-option" disabled>
       No results found
