--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-details/query-details.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-details/query-details.component.html
@@ -1,4 +1,7 @@
 <ng-container *ngIf="query">
+  <p>
+    <a class="govuk-link" href="javascript:void(0)" (click)="onBack()">{{ 'Back to query list' | rpxTranslate }}</a>
+  </p>
   <div>
     <table class="govuk-table query-details-table" [attr.aria-describedby]="'Details of the query' | rpxTranslate">
       <caption class="govuk-table__caption govuk-table__caption--l">
