--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/judicial-user/write-judicial-user-field.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/judicial-user/write-judicial-user-field.component.html
@@ -1,4 +1,4 @@
-<div class="form-group" [formGroup]="formGroup">
+<div class="form-group" [formGroup]="formGroup" [ngClass]="{'form-group-error': !!judicialUserControl && errors}">
   <label [for]="id()">
     <span *ngIf="caseField.label" class="form-label">
       {{caseField | ccdFieldLabel}}
@@ -7,16 +7,22 @@
   <span *ngIf="caseField.hint_text" class="form-hint">
     {{caseField.hint_text}}
   </span>
+  <span class="error-message" *ngIf="errors">
+    {{errors | ccdFirstError:caseField.label}}
+  </span>
   <input class="form-control bottom-30" [id]="id()"
-    [formControl]="judicialUserControl" [matAutocomplete]="autoComplete">
+    [formControl]="judicialUserControl" [matAutocomplete]="autoComplete" (blur)="onBlur($event)">
   <mat-autocomplete autoActiveFirstOption #autoComplete="matAutocomplete" [displayWith]="displayJudicialUser">
     <mat-option *ngFor="let judicialUser of filteredJudicialUsers$ | async"
       class="select-option" [ngClass]="{'hide-autocomplete': !showAutocomplete}"
       [value]="judicialUser" (onSelectionChange)="onSelectionChange($event)">
-      {{ judicialUser.fullName }} ({{ judicialUser.emailId }})
+      {{judicialUser?.fullName ? judicialUser.fullName : ''}}{{judicialUser?.emailId ? ' (' + judicialUser.emailId + ')' : ''}}
     </mat-option>
     <mat-option *ngIf="noResults && searchTerm && searchTerm.length > minSearchCharacters && showAutocomplete" class="select-option" disabled>
       No results found
+    </mat-option>
+    <mat-option *ngIf="invalidSearchTerm" class="select-option" disabled>
+      Invalid search term
     </mat-option>
   </mat-autocomplete>
 </div>
