--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/search-language-interpreter/search-language-interpreter.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/search-language-interpreter/search-language-interpreter.component.html
@@ -1,10 +1,10 @@
 <ng-container [formGroup]="formGroup">
   <div class="govuk-form-group" [ngClass]="{'form-group-error': languageNotSelectedErrorMessage || languageEnteredInBothFieldsErrorMessage}">
-    <h1 class="govuk-label-wrapper">
-      <label class="govuk-label govuk-label--l" [for]="SearchLanguageInterpreterControlNames.LANGUAGE_SEARCH_TERM">
+    <h2 class="heading-h2">
+      <label [for]="SearchLanguageInterpreterControlNames.LANGUAGE_SEARCH_TERM">
         {{flagType | flagFieldDisplay:'name'}}
       </label>
-    </h1>
+    </h2>
     <div id="language-search-box-hint" class="govuk-hint">
       {{searchLanguageInterpreterHint | rpxTranslate}}
     </div>
