--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/select-flag-type/select-flag-type.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/select-flag-type/select-flag-type.component.html
@@ -2,14 +2,14 @@
   <div class="govuk-form-group" [ngClass]="{'form-group-error': flagTypeNotSelectedErrorMessage.length > 0}">
     <fieldset class="govuk-fieldset" aria-describedby="flag-type-heading">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-        <h1 id="flag-type-heading" class="govuk-fieldset__heading govuk-!-margin-bottom-1">
+        <h2 id="flag-type-heading" class="heading-h2">
           <ng-container *ngIf="!cachedFlagType; else priorFlagTypeSelected">
             {{caseFlagWizardStepTitle.SELECT_CASE_FLAG | rpxTranslate}}
           </ng-container>
           <ng-template #priorFlagTypeSelected>
             {{cachedFlagType | flagFieldDisplay:'name'}}
           </ng-template>
-        </h1>
+        </h2>
       </legend>
       <div id="flag-type-not-selected-error-message" class="govuk-error-message"
         *ngIf="flagTypeNotSelectedErrorMessage.length > 0">
