--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/update-flag/update-flag-add-translation-form/update-flag-add-translation-form.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/update-flag/update-flag-add-translation-form/update-flag-add-translation-form.component.html
@@ -1,9 +1,11 @@
 <ng-container [formGroup]="formGroup">
   <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="200">
     <div class="govuk-form-group" [ngClass]="{'form-group-error': errorMessages.length > 0}">
-      <h2 class="heading-h2">
+      <h1 class="govuk-label-wrapper govuk-!-margin-bottom-6">
+        <label class="govuk-label govuk-label--m">
           {{ updateFlagAddTranslationTitle | rpxTranslate}}
-      </h2>
+        </label>
+      </h1>
       <div id="add-translation-form-hint" class="govuk-hint">
         {{ updateFlagAddTranslationStepEnum.HINT_TEXT | rpxTranslate}}
       </div>
