--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/manage-case-flags/manage-case-flags.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/manage-case-flags/manage-case-flags.component.html
@@ -1,10 +1,10 @@
 <ng-container [formGroup]="formGroup">
   <div class="govuk-form-group" [ngClass]="{'form-group-error': errorMessages.length > 0}">
     <fieldset class="govuk-fieldset" aria-describedby="manage-case-flag-heading">
-      <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-        <h2 id="manage-case-flag-heading" class="heading-h2">
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+        <h1 id="manage-case-flag-heading" class="govuk-fieldset__heading">
           {{manageCaseFlagTitle | rpxTranslate}}
-        </h2>
+        </h1>
       </legend>
       <div id="manage-case-flag-not-selected-error-message" class="govuk-error-message"
         *ngIf="manageCaseFlagSelectedErrorMessage">
