EUI-8709 Case flags v2.1 Add comments warning message

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/add-comments/add-comments.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/add-comments/add-comments.component.html
@@ -11,7 +11,7 @@
       <div class="govuk-warning-text" *ngIf="!isDisplayContextParameterExternal">
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
         <strong class="govuk-warning-text__text">
-          <span class="govuk-warning-text__assistive">Warning</span>
+          <span class="govuk-warning-text__assistive">{{'Warning' | rpxTranslate}}</span>
           {{addCommentsStepEnum.WARNING_TEXT | rpxTranslate}}
         </strong>
       </div>
