--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/update-flag/update-flag.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/update-flag/update-flag.component.html
@@ -21,7 +21,7 @@
         <div class="govuk-warning-text" *ngIf="displayContextParameter === caseFlagDisplayContextParameter.UPDATE">
           <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
           <strong class="govuk-warning-text__text">
-            <span class="govuk-warning-text__assistive">Warning</span>
+            <span class="govuk-warning-text__assistive">{{'Warning' | rpxTranslate}}</span>
             {{updateFlagStepEnum.WARNING_TEXT | rpxTranslate}}
           </strong>
         </div>
