EUI-8705 Case flags v2.1 New checkbox when other flag type is selected

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/select-flag-type/select-flag-type.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/select-flag-type/select-flag-type.component.html
@@ -34,6 +34,14 @@
               [ngClass]="{'govuk-input--error': flagTypeErrorMessage.length > 0}"
               id="other-flag-type-description" [name]="caseFlagFormField.OTHER_FLAG_DESCRIPTION" type="text"
               [formControlName]="caseFlagFormField.OTHER_FLAG_DESCRIPTION"/>
+            <div class="govuk-checkboxes__item govuk-!-margin-top-4"
+              *ngIf="!isDisplayContextParameterExternal && !isCaseLevelFlag">
+              <input class="govuk-checkboxes__input" id="is-visible-externally" type="checkbox"
+                [name]="caseFlagFormField.IS_VISIBLE_EXTERNALLY" [formControlName]="caseFlagFormField.IS_VISIBLE_EXTERNALLY">
+              <label class="govuk-label govuk-checkboxes__label" for="is-visible-externally">
+                {{'This flag should only be visible to HMCTS Staff' | rpxTranslate}}
+              </label>
+            </div>
           </div>
         </div>
       </div>
