--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/yes-no/write-yes-no-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/yes-no/write-yes-no-field.html
@@ -5,7 +5,7 @@
     </legend>
     <span class="form-hint" *ngIf="caseField.hint_text">{{caseField.hint_text | rpxTranslate}}</span>
     <span class="error-message" *ngIf="yesNoControl.errors && (yesNoControl.dirty || yesNoControl.touched)">
-      {{yesNoControl.errors | ccdFirstError:caseField.label | rpxTranslate}}
+      {{yesNoControl.errors | ccdFirstError:caseField.label}}
     </span>
 
     <div [id]="createElementId('radio')">
