--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-link/write-case-link-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-link/write-case-link-field.html
@@ -4,7 +4,7 @@
   </label>
   <span class="form-hint" *ngIf="caseField.hint_text">{{caseField.hint_text | rpxTranslate}}</span>
   <span class="error-message" *ngIf="caseReferenceControl.errors && (caseReferenceControl.dirty || caseReferenceControl.touched)">
-    {{ caseReferenceControl.errors | ccdFirstError:caseField.label | rpxTranslate}}
+    {{caseReferenceControl.errors | ccdFirstError:caseField.label}}
   </span>
   <input class="form-control bottom-30" [id]="id()" type="text" [formControl]="caseReferenceControl">
 </div>
