--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/collection/write-collection-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/collection/write-collection-field.html
@@ -9,7 +9,7 @@
     <h2 class="heading-h2 error-spacing" *ngIf="caseField.hint_text || formArray.errors">
       <span *ngIf="caseField.hint_text" class="form-hint">{{caseField.hint_text | rpxTranslate }}</span>
       <span *ngIf="formArray.errors" class="error-message">
-        {{(formArray.errors | ccdFirstError:caseField.label ) | rpxTranslate}}
+        {{(formArray.errors | ccdFirstError:caseField.label)}}
       </span>
     </h2>
 
