--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/dynamic-list/write-dynamic-list-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/dynamic-list/write-dynamic-list-field.html
@@ -8,7 +8,7 @@
   <span class="form-label" *ngIf="!caseField.label && !caseField.hint_text">{{'Select an option from the dropdown' | rpxTranslate}}</span>
   <span class="error-message"
     *ngIf="dynamicListFormControl.errors && dynamicListFormControl.dirty">{{(dynamicListFormControl.errors |
-    ccdFirstError:caseField.label) | rpxTranslate}}</span>
+    ccdFirstError:caseField.label)}}</span>
 
   <select class="form-control ccd-dropdown bottom-30" [id]="id()"
     [formControl]="dynamicListFormControl">
