--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-submit/case-edit-submit.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-submit/case-edit-submit.html
@@ -1,6 +1,6 @@
 <div *ngIf="!caseEdit.isEventCompletionChecksRequired">
   <!-- Event trigger name -->
-  <h1 class="govuk-heading-l">{{ eventTrigger.name}}</h1>
+  <h1 class="govuk-heading-l">{{eventTrigger.name | rpxTranslate}}</h1>
 
   <!--Case ID or Title -->
   <div *ngIf="getCaseTitle(); then titleBlock; else idBlock"></div>
@@ -41,7 +41,11 @@
                   </td>
                   <td class="valign-top check-your-answers__change case-field-change">
                     <a *ngIf="isChangeAllowed(field)" (click)="navigateToPage(page.id)"
-                      href="javascript:void(0)"><span class="text-16" attr.aria-label="Change {{ field.label }}">Change</span></a>
+                      href="javascript:void(0)">
+                      <span class="text-16" attr.aria-label="{{'Change' | rpxTranslate}} {{ field.label | rpxTranslate }}">
+                        {{'Change' | rpxTranslate}}
+                      </span>
+                    </a>
                   </td>
                 </tr>
               </ng-container>
@@ -91,10 +95,18 @@
       </fieldset>
     </ng-container>
     <div class="form-group form-group-related">
-      <button class="button button-secondary" type="button" [disabled]="!hasPrevious() || caseEdit.isSubmitting" (click)="previous()">Previous</button>
-      <button type="submit" [disabled]="isDisabled" class="button">{{triggerText}}</button>
+      <button class="button button-secondary" type="button" [disabled]="!hasPrevious() || caseEdit.isSubmitting" (click)="previous()">
+        {{'Previous' | rpxTranslate}}
+      </button>
+      <button type="submit" [disabled]="isDisabled" class="button">
+        {{triggerText | rpxTranslate}}
+      </button>
     </div>
-    <p class="cancel"><a (click)="cancel()" href="javascript:void(0)" [class.disabled]="caseEdit.isSubmitting">{{getCancelText()}}</a></p>
+    <p class="cancel">
+      <a (click)="cancel()" href="javascript:void(0)" [class.disabled]="caseEdit.isSubmitting">
+        {{getCancelText() | rpxTranslate}}
+      </a>
+    </p>
   </form>
 </div>
 <ccd-case-event-completion *ngIf="caseEdit.isEventCompletionChecksRequired"
