--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-submit/case-edit-submit.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-submit/case-edit-submit.html
@@ -1,6 +1,6 @@
 <div *ngIf="!caseEdit.isEventCompletionChecksRequired">
   <!-- Event trigger name -->
-  <h1 class="govuk-heading-l">{{ eventTrigger.name | rpxTranslate}}</h1>
+  <h1 class="govuk-heading-l">{{eventTrigger.name | rpxTranslate}}</h1>
 
   <!--Case ID or Title -->
   <div *ngIf="getCaseTitle(); then titleBlock; else idBlock"></div>
@@ -41,16 +41,14 @@
                       [formGroup]="editForm.controls['data']" [topLevelFormGroup]="editForm.controls['data']"
                       [caseField]="summaryCaseField(field)" [context]="paletteContext" [caseFields]="contextFields"></ccd-field-read>
                   </td>
-                  <ng-container *ngIf="!caseFlagField">
-                    <td class="valign-top check-your-answers__change case-field-change">
-                      <a *ngIf="isChangeAllowed(field)" (click)="navigateToPage(page.id)"
-                        href="javascript:void(0)">
-                        <span class="text-16" attr.aria-label="{{'Change' | rpxTranslate}} {{ field.label | rpxTranslate }}">
-                          {{'Change' | rpxTranslate}}
-                        </span>
-                      </a>
-                    </td>
-                  </ng-container>
+                  <td class="valign-top check-your-answers__change case-field-change">
+                    <a *ngIf="isChangeAllowed(field)" (click)="navigateToPage(page.id)"
+                      href="javascript:void(0)">
+                      <span class="text-16" attr.aria-label="{{'Change' | rpxTranslate}} {{ field.label | rpxTranslate }}">
+                        {{'Change' | rpxTranslate}}
+                      </span>
+                    </a>
+                  </td>
                 </tr>
               </ng-container>
             </ng-container>
@@ -82,7 +80,7 @@
       </table>
     </ng-container>
     <ng-container *ngIf="showEventNotes()">
-      <fieldset id="fieldset-event" formGroupName="event">
+      <fieldset id="fieldset-event" formGroupName="event" *ngIf="profile && !isSolicitor()">
         <legend style="display: none;"></legend>
         <div class="form-group">
           <label for="field-trigger-summary" class="form-label">
@@ -94,13 +92,12 @@
         <div class="form-group">
           <label for="field-trigger-description" class="form-label">{{'Event description(optional)' | rpxTranslate}}</label>
           <textarea id="field-trigger-description" class="form-control bottom-30 width-50" formControlName="description"
-                    maxlength="65536">
-          </textarea>
+                    maxlength="65536"></textarea>
         </div>
       </fieldset>
     </ng-container>
     <div class="form-group form-group-related">
-      <button class="button button-secondary" type="button" [disabled]="!hasPrevious() || isSubmitting" (click)="previous()">
+      <button class="button button-secondary" type="button" [disabled]="!hasPrevious() || caseEdit.isSubmitting" (click)="previous()">
         {{'Previous' | rpxTranslate}}
       </button>
       <button type="submit" [disabled]="isDisabled" class="button">
@@ -108,7 +105,7 @@
       </button>
     </div>
     <p class="cancel">
-      <a (click)="cancel()" href="javascript:void(0)" [class.disabled]="isSubmitting">
+      <a (click)="cancel()" href="javascript:void(0)" [class.disabled]="caseEdit.isSubmitting">
         {{getCancelText() | rpxTranslate}}
       </a>
     </p>
