--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-check-your-answers/query-check-your-answers.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-check-your-answers/query-check-your-answers.component.html
@@ -120,6 +120,6 @@
     </div>
   </div>
 
-  <ccd-query-event-completion *ngIf="triggerEvent" [eventCompletionParams]="eventCompletionParams">    
+  <ccd-query-event-completion [eventCompletionParams]="eventCompletionParams">    
   </ccd-query-event-completion>
 </div>
