--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/add-comments/add-comments.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/add-comments/add-comments.component.html
@@ -6,7 +6,7 @@
         </label>
       </h1>
       <div id="add-comments-hint" class="govuk-hint">
-        {{addCommentsStepEnum.HINT_TEXT | rpxTranslate}}
+        {{addCommentsHint | rpxTranslate}}
       </div>
       <div class="govuk-warning-text" *ngIf="!isDisplayContextParameterExternal">
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
