EUI-8778: Prevent flag status tag text from wrapping in Case Flags table
Ensure the status tag text is displayed on a single line, irrespective of screen width.

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/case-flag-table/case-flag-table.component.scss
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/case-flag-table/case-flag-table.component.scss
@@ -21,4 +21,11 @@
       }
     }
   }
+  .govuk-table__body {
+    .govuk-table__row {
+      .cell-flag-status {
+        white-space: nowrap;
+      }
+    }
+  }
 }
