EUI-8711: Case Flags v2.1 - Group internal and external flag collections by groupId for internal users (#1561)
* EUI-8711: Case Flags v2.1 - Group internal and external flag collections by groupId for internal users

Ensure internal and external collections of flag data are grouped by groupId into one instance of the `Flags` object per party, for internal users.

* EUI-8705 Case flags v2.1 New checkbox when other flag type is selected

* Fix release notes ordering

* EUI-8706: Case Flags v2.1 - Determine correct location for adding new flags (#1570)

Determine the correct location for a flag to be added - either internal or external - based on whether the flag is marked as "internal only" if of type "Other", or its `externallyAvailable` attribute if not of type "Other".

* Fix headings

* Dan's review fix

* Remove spec reporter

* EUI-8711/EUI-8706: Case Flags v2.1 functionality

Re-tag for formal release. Also includes EUI-8734.

---------

Co-authored-by: John Benjamin <john.benjamin@hmcts.net>
Co-authored-by: DavidJayakumar <David.Jayakumar@hmcts.net>

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/select-flag-type/select-flag-type.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/select-flag-type/select-flag-type.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="flagTypes?.length" [formGroup]="formGroup">
   <div class="govuk-form-group" [ngClass]="{'form-group-error': flagTypeNotSelectedErrorMessage.length > 0}">
     <fieldset class="govuk-fieldset" aria-describedby="flag-type-heading">
-      <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
         <h1 id="flag-type-heading" class="govuk-fieldset__heading govuk-!-margin-bottom-1">
           <ng-container *ngIf="!cachedFlagType; else priorFlagTypeSelected">
             {{caseFlagWizardStepTitle.SELECT_CASE_FLAG | rpxTranslate}}
@@ -34,6 +34,14 @@
               [ngClass]="{'govuk-input--error': flagTypeErrorMessage.length > 0}"
               id="other-flag-type-description" [name]="caseFlagFormField.OTHER_FLAG_DESCRIPTION" type="text"
               [formControlName]="caseFlagFormField.OTHER_FLAG_DESCRIPTION"/>
+            <div class="govuk-checkboxes__item govuk-!-margin-top-4"
+              *ngIf="!isDisplayContextParameterExternal && !isCaseLevelFlag">
+              <input class="govuk-checkboxes__input" id="is-visible-externally" type="checkbox"
+                [name]="caseFlagFormField.IS_VISIBLE_INTERNALLY_ONLY" [formControlName]="caseFlagFormField.IS_VISIBLE_INTERNALLY_ONLY">
+              <label class="govuk-label govuk-checkboxes__label" for="is-visible-externally">
+                {{'This flag should only be visible to HMCTS Staff' | rpxTranslate}}
+              </label>
+            </div>
           </div>
         </div>
       </div>
