--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/add-comments/add-comments.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/add-comments/add-comments.component.html
@@ -1,7 +1,7 @@
 <ng-container [formGroup]="formGroup">
   <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="200">
     <div class="govuk-form-group" [ngClass]="{'form-group-error': errorMessages.length > 0}">
-      <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" [for]="flagCommentsControlName">
+      <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" [for]="flagCommentsControlName">
           {{addCommentsTitle | rpxTranslate}}<span *ngIf="optional"> ({{'optional' | rpxTranslate}})</span>
         </label>
       </h1>
