--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/search-language-interpreter/search-language-interpreter.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/search-language-interpreter/search-language-interpreter.component.html
@@ -1,7 +1,7 @@
 <ng-container [formGroup]="formGroup">
   <div class="govuk-form-group" [ngClass]="{'form-group-error': languageNotSelectedErrorMessage || languageEnteredInBothFieldsErrorMessage}">
     <h1 class="govuk-label-wrapper">
-      <label class="govuk-label govuk-label--l" [for]="SearchLanguageInterpreterControlNames.LANGUAGE_SEARCH_TERM">
+      <label class="govuk-label govuk-label--m" [for]="SearchLanguageInterpreterControlNames.LANGUAGE_SEARCH_TERM">
         {{flagType | flagFieldDisplay:'name'}}
       </label>
     </h1>
