--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/update-flag/update-flag.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/update-flag/update-flag.component.html
@@ -2,7 +2,7 @@
   <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="200">
     <div class="govuk-form-group" [ngClass]="{'form-group-error': errorMessages.length > 0}">
       <h1 class="govuk-label-wrapper govuk-!-margin-bottom-4">
-        <label class="govuk-label govuk-label--l">
+        <label class="govuk-label govuk-label--m">
           {{updateFlagTitle | rpxTranslate}}
         </label>
       </h1>
