EUI-8460 QM Raise a query submission

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-confirmation/query-confirmation.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-confirmation/query-confirmation.component.html
@@ -19,7 +19,8 @@
           <div class="govuk-panel__body">This query response has been added to the case</div>
         </div>
         <div class="govuk-body">
-          You can <a class="govuk-link" href="javascript:void(0)" routerLink="/cases/case-details/{{caseId}}">return to tasks</a> or <a class="govuk-link" href="javascript:void(0)">Go back to the case</a>
+          You can <a class="govuk-link" href="javascript:void(0)" routerLink="/cases/case-details/{{caseId}}">return to tasks</a> or
+					<a class="govuk-link" href="javascript:void(0)" routerLink="/cases/case-details/{{caseId}}">Go back to the case</a>
         </div>
       </ng-container>
     </div>
