--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/qualifying-questions/qualifying-question-options/qualifying-question-options.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/qualifying-questions/qualifying-question-options/qualifying-question-options.component.html
@@ -29,9 +29,7 @@
               rpxTranslate }}</label>
             <div *ngIf="isLast" class="govuk-hint govuk-radios__hint">
               {{ '(To reply to an existing query' | rpxTranslate }}
-              <a class="govuk-link" href="javascript:void(0)" (click)="click()">
-                {{ 'click here' | rpxTranslate }}
-              </a>.)
+              <a class="govuk-link" href="javascript:void(0)" (click)="click()">{{ 'click here' | rpxTranslate }}</a>.)
             </div>
           </div>
         </ng-container>
