--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/write-case-flag-field.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/write-case-flag-field.component.html
@@ -23,6 +23,7 @@
     <ng-container *ngSwitchCase="caseFlagFieldState.FLAG_TYPE">
       <ccd-select-flag-type [formGroup]="caseFlagParentFormGroup" [jurisdiction]="jurisdiction" [caseTypeId]="caseTypeId"
         [hmctsServiceId]="hmctsServiceId" [isDisplayContextParameterExternal]="isDisplayContextParameterExternal"
+        [isDisplayContextParameter2Point1Enabled]="isDisplayContextParameter2Point1Enabled"
         [selectedFlagsLocation]="selectedFlagsLocation"
         (caseFlagStateEmitter)="onCaseFlagStateEmitted($event)"
         (flagCommentsOptionalEmitter)="onFlagCommentsOptionalEmitted($event)"></ccd-select-flag-type>
@@ -37,7 +38,8 @@
       <ccd-add-comments [formGroup]="caseFlagParentFormGroup" [optional]="flagCommentsOptional"
         (caseFlagStateEmitter)="onCaseFlagStateEmitted($event)"
         [isDisplayContextParameterExternal]="isDisplayContextParameterExternal"
-      ></ccd-add-comments>
+        [isDisplayContextParameter2Point1Enabled]="isDisplayContextParameter2Point1Enabled">
+      </ccd-add-comments>
     </ng-container>
     <ng-container *ngSwitchCase="caseFlagFieldState.FLAG_STATUS">
       <ccd-confirm-flag-status [formGroup]="caseFlagParentFormGroup" [defaultStatus]="flagType.defaultStatus"
