--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/select-flag-type/select-flag-type.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/select-flag-type/select-flag-type.component.html
@@ -45,7 +45,7 @@
               id="other-flag-type-description" [name]="caseFlagFormField.OTHER_FLAG_DESCRIPTION" type="text"
               [formControlName]="caseFlagFormField.OTHER_FLAG_DESCRIPTION"/>
             <div class="govuk-checkboxes__item govuk-!-margin-top-4"
-              *ngIf="!isDisplayContextParameterExternal && !isCaseLevelFlag">
+              *ngIf="!isDisplayContextParameterExternal && !isCaseLevelFlag && isDisplayContextParameter2Point1Enabled">
               <input class="govuk-checkboxes__input" id="is-visible-externally" type="checkbox"
                 [name]="caseFlagFormField.IS_VISIBLE_INTERNALLY_ONLY" [formControlName]="caseFlagFormField.IS_VISIBLE_INTERNALLY_ONLY">
               <label class="govuk-label govuk-checkboxes__label" for="is-visible-externally">
