EUI-8819: Case Flags v2.1 consolidation - Final release (#1588)
* Case flags v2

* EUI-8779 Merge unmerged RA code

* EUI-8779 Merge unmerged RA code

* EUI-8779 Merge unmerged RA code

* EUI-8779 Merge unmerged RA code

* Merge pull request #1552 from hmcts/feature/EUI-8779---Merge-unmerged-RA-code

EUI-8779 Reasonable adjustments - update base branch with un-merged code

* EUI-8778: Prevent flag status tag text from wrapping in Case Flags table

Ensure the status tag text is displayed on a single line, irrespective of screen width.

* EUI-8778: Prevent flag status tag text from wrapping in Case Flags table (#1554)

Ensure the status tag text is displayed on a single line, irrespective of screen width.

* EUI-8819: Case Flags v2.1 consolidation - Minor UI display changes

Colour changes for "Active" and "Requested" flag status tags on Case Flags page; flag status now displayed for all users, and on both flag creation and update, on Case Flag Summary (CYA) page.

* EUI-8819: Case Flags v2.1 consolidation - Interim release

Interim release of Case Flags v2.1 consolidation; includes minor UI display changes (flag status tag colour changes; flag status displayed on Case Flag Summary page always).

* EUI-8819: Case Flags v2.1 consolidation - Final release

Final release of Case Flags v2.1 consolidation; includes support for "dual mode" operation, allowing the Case Flags feature to be run as either v1 or v2.1.

---------

Co-authored-by: John Benjamin <john.benjamin@hmcts.net>
Co-authored-by: John Benjamin <90200268+johnbenjamin-hmcts@users.noreply.github.com>

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/add-comments/add-comments.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/add-comments/add-comments.component.html
@@ -6,9 +6,9 @@
         </label>
       </h1>
       <div id="add-comments-hint" class="govuk-hint">
-        {{addCommentsStepEnum.HINT_TEXT | rpxTranslate}}
+        {{addCommentsHint | rpxTranslate}}
       </div>
-      <div class="govuk-warning-text" *ngIf="!isDisplayContextParameterExternal">
+      <div class="govuk-warning-text" *ngIf="!isDisplayContextParameterExternal && isDisplayContextParameter2Point1Enabled">
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
         <strong class="govuk-warning-text__text">
           <span class="govuk-warning-text__assistive">{{'Warning' | rpxTranslate}}</span>
