--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/case-flag-summary-list/case-flag-summary-list.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/case-flag-summary-list/case-flag-summary-list.component.html
@@ -4,7 +4,7 @@
       {{addUpdateFlagHeaderText | rpxTranslate}}
     </dt>
     <dd class="govuk-summary-list__value">
-      {{flagForSummaryDisplay.partyName || caseLevelLocation | rpxTranslate}}
+      {{flagForSummaryDisplay.partyName || caseFlagCheckYourAnswersPageStep.CASE_LEVEL_LOCATION | rpxTranslate}}
     </dd>
     <dd class="govuk-summary-list__actions">
       <a class="govuk-link" href="javascript:void(0)"
@@ -15,7 +15,7 @@
   </div>
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
-      {{'Flag type' | rpxTranslate}}
+      {{flagTypeHeaderText | rpxTranslate}}
     </dt>
     <dd class="govuk-summary-list__value">
       {{flagDescription}}
@@ -69,7 +69,7 @@
       </a>
     </dd>
   </div>
-  <div class="govuk-summary-list__row" *ngIf="canDisplayStatus">
+  <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       {{'Status' | rpxTranslate}}
     </dt>
