--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/select-flag-type/select-flag-type.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/select-flag-type/select-flag-type.component.html
@@ -4,7 +4,11 @@
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
         <h1 id="flag-type-heading" class="govuk-fieldset__heading govuk-!-margin-bottom-1">
           <ng-container *ngIf="!cachedFlagType; else priorFlagTypeSelected">
-            {{caseFlagWizardStepTitle.SELECT_CASE_FLAG | rpxTranslate}}
+            {{
+              isDisplayContextParameterExternal
+                ? (caseFlagWizardStepTitle.SELECT_CASE_FLAG_EXTERNAL | rpxTranslate)
+                : (caseFlagWizardStepTitle.SELECT_CASE_FLAG | rpxTranslate)
+            }}
           </ng-container>
           <ng-template #priorFlagTypeSelected>
             {{cachedFlagType | flagFieldDisplay:'name'}}
@@ -26,7 +30,13 @@
         </div>
         <div class="govuk-radios__conditional" *ngIf="otherFlagTypeSelected" id="conditional-flagType">
           <div class="govuk-form-group" [ngClass]="{'form-group-error': flagTypeErrorMessage.length > 0}">
-            <label class="govuk-label" for="other-flag-type-description">{{'Enter a flag type' | rpxTranslate}}</label>
+            <label class="govuk-label" for="other-flag-type-description">
+              {{
+                isDisplayContextParameterExternal
+                  ? (caseFlagWizardStepTitle.OTHER_FLAG_TYPE_DESCRIPTION_EXTERNAL | rpxTranslate)
+                  : (caseFlagWizardStepTitle.OTHER_FLAG_TYPE_DESCRIPTION | rpxTranslate)
+              }}
+            </label>
             <div id="flag-type-error-message" class="govuk-error-message" *ngIf="flagTypeErrorMessage.length > 0">
               <span class="govuk-visually-hidden">{{'Error:' | rpxTranslate}}</span> {{flagTypeErrorMessage | rpxTranslate}}
             </div>
@@ -35,7 +45,7 @@
               id="other-flag-type-description" [name]="caseFlagFormField.OTHER_FLAG_DESCRIPTION" type="text"
               [formControlName]="caseFlagFormField.OTHER_FLAG_DESCRIPTION"/>
             <div class="govuk-checkboxes__item govuk-!-margin-top-4"
-              *ngIf="!isDisplayContextParameterExternal && !isCaseLevelFlag">
+              *ngIf="!isDisplayContextParameterExternal && !isCaseLevelFlag && isDisplayContextParameter2Point1Enabled">
               <input class="govuk-checkboxes__input" id="is-visible-externally" type="checkbox"
                 [name]="caseFlagFormField.IS_VISIBLE_INTERNALLY_ONLY" [formControlName]="caseFlagFormField.IS_VISIBLE_INTERNALLY_ONLY">
               <label class="govuk-label govuk-checkboxes__label" for="is-visible-externally">
